# gmail-cleaner-pro

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml
app/api/: actions.py  status.py
app/core/: config.py  state.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  auth.py
app/services/gmail/: __init__.py  cleanup_rules.py  delete.py  helpers.py  preview.py  scan.py
docs/: index.html
static/css/: base.css  components.css
static/js/: delete.js  filters.js  keyboard-shortcuts.js  preview.js  theme.js
templates/: index.html
